# BachelorThesis

./: README.md
Assets/: AudioManager.cs  ChangePannels.cs  Clock.cs  CubesInside.cs  DemoChangeP.cs  EMSTestScript.cs  FeedbackController.cs  FeedbackEvent.cs  Feedbackmodified.cs  HandTrackingGrabber.cs  Lookray.cs  New Render Texture.renderTexture  Panel2.prefab  Physicsbutton.cs  PlayerStats.cs  Sound.cs  SourceDestinationPublisherUR5.cs  StartClock.cs  TrajectoryPlannerUr5.cs  Tree 1.prefab  Tree.prefab  VisualController.cs  WhereIsCube.cs  grab_2.cs  msgbrowser_settings.asset  prova.cs  testing.cs
Assets/Materials/: Environment.mat  New Material.mat  base.mat  (+10 more)
New Unity Project (1)_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets.resS  sharedassets0.assets  sharedassets0.resource
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
ROS/src/ur5_moveit/: .setup_assistant  CMakeLists - Kopie.txt  CMakeLists.txt  package.xml
ROS/src/ur5_moveit/config/: joint_limits.yaml  ur5.srdf
ROS/src/ur5_moveit/launch/: demo_gazebo.launch  demo_new.launch  demo_planning_execution.launch  gazebo.launch  move_group.launch  moveit_rviz.launch  part_2.launch  part_3.launch  part_nuria.launch  planning_context.launch  sensor_manager.launch.xml  ur5_moveit_controller_manager.launch.xml
ROS/src/ur5_moveit/scripts/: mover.py  trajectory_subscriber.py
ROS/src/ur5_moveit/srv/: MoverService.srv
UserSettings/: EditorUserSettings.asset
(+496 files in other folders)
